--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -316,22 +316,183 @@ predios y construcciones vecinas.</p>
   </div>
 </section>
 
-  
+  <!-- Contacto -->
+  <section id="contacto" class="mb-5 py-4 rounded" style="background-color: #f4f4f4;">
+    <h2 class="fw-bold border-bottom pb-2" style="color: #594E40;">Contáctenos</h2>
     
-            
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container text-center">
-      <p>&copy; 2025 GCA Geociencias Aplicadas SAS. Todos los derechos reservados.</p>
-      <p>Especialistas en Geología, Geotecnia, Recursos Hídricos, Medio Ambiente y SIG.</p>
+    <div class="row mt-4">
+      <div class="col-lg-6">
+        <div class="card h-100">
+          <div class="card-body">
+            <h4 style="color: #594E40;">Solicite una asesoría</h4>
+            <form>
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre completo</label>
+                <input type="text" class="form-control" id="nombre" required>
+              </div>
+              <div class="mb-3">
+                <label for="empresa" class="form-label">Empresa</label>
+                <input type="text" class="form-control" id="empresa">
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" required>
+              </div>
+              <div class="mb-3">
+                <label for="servicio" class="form-label">Servicio de interés</label>
+                <select class="form-select" id="servicio">
+                  <option selected>Seleccione un servicio</option>
+                  <option>Exploración minera</option>
+                  <option>Estudios hidrogeológicos</option>
+                  <option>Geotecnia e ingeniería civil</option>
+                  <option>Investigación ambiental</option>
+                  <option>Prospección arqueológica</option>
+                  <option>Otro</option>
+                </select>
+              </div>
+              <div class="mb-3">
+                <label for="mensaje" class="form-label">Describa su proyecto</label>
+                <textarea class="form-control" id="mensaje" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn" style="background-color: #594E40; color: white;">Enviar solicitud</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="card h-100">
+          <div class="card-body">
+            <h4 style="color: #594E40;">Nuestras oficinas</h4>
+            <div class="mb-4">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.785931816786!2d-74.083905924682!3d4.638129942540608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9a3b0f0e0e0f%3A0x1b8c3b0f0e0e0e0f!2sGeoconsultores%20Asociados!5e0!3m2!1sen!2sco!4v1620000000000!5m2!1sen!2sco" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <ul class="list-unstyled">
+              <li><i class="bi bi-geo-alt-fill me-2" style="color: #C0B59B;"></i> Cra 45 #26-85, Bogotá, Colombia</li>
+              <li><i class="bi bi-telephone-fill me-2" style="color: #C0B59B;"></i> +57 1 123 4567</li>
+              <li><i class="bi bi-envelope-fill me-2" style="color: #C0B59B;"></i> geofisica@geoconsultores.com</li>
+              <li><i class="bi bi-clock-fill me-2" style="color: #C0B59B;"></i> Lunes a Viernes: 8:00 am - 5:00 pm</li>
+            </ul>
+            <hr>
+            <h5 style="color: #594E40;">Descargables</h5>
+            <div class="d-flex flex-wrap gap-2">
+              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-file-earmark-pdf"></i> Brochure PDF</a>
+              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-file-earmark-word"></i> Formatos</a>
+              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-file-earmark-text"></i> Términos</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </footer>
+  </section>
+</main>
 
-  <!-- Botón WhatsApp -->
-  <a href="https://wa.me/573057287714" class="whatsapp-button" target="_blank">
-    <i class="bi bi-whatsapp"></i>
-  </a>
+<!-- Footer -->
+<footer class="py-5" style="background-color: #594E40; color: white;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <h5>Geoconsultores Asociados</h5>
+        <p>Especialistas en geofísica aplicada con tecnología de punta para exploración del subsuelo.</p>
+        <div class="social-icons">
+          <a href="#" class="text-white me-2"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="text-white me-2"><i class="bi bi-twitter-x"></i></a>
+          <a href="#" class="text-white me-2"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="text-white me-2"><i class="bi bi-youtube"></i></a>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h5>Métodos Geofísicos</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-white">Sísmica</a></li>
+          <li><a href="#" class="text-white">Eléctrica/Electromagnética</a></li>
+          <li><a href="#" class="text-white">Magnetometría</a></li>
+          <li><a href="#" class="text-white">Gravimetría</a></li>
+          <li><a href="#" class="text-white">Georadar (GPR)</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h5>Certificaciones</h5>
+        <div class="d-flex flex-wrap gap-3">
+          <img src="Imagenes/certificacion-icp.png" alt="ICP" style="height: 50px;">
+          <img src="Imagenes/certificacion-iso.png" alt="ISO" style="height: 50px;">
+          <img src="Imagenes/certificacion-sgc.png" alt="SGC" style="height: 50px;">
+        </div>
+        <div class="mt-3">
+          <p class="small">Acreditados por el Servicio Geológico Colombiano para estudios geofísicos.</p>
+        </div>
+      </div>
+    </div>
+    <hr class="my-4" style="border-color: #C0B59B;">
+    <div class="row">
+      <div class="col-md-6">
+        <p class="mb-0">© 2023 Geoconsultores Asociados. Todos los derechos reservados.</p>
+      </div>
+      <div class="col-md-6 text-md-end">
+        <a href="#" class="text-white me-3">Política de privacidad</a>
+        <a href="#" class="text-white me-3">Términos de servicio</a>
+        <a href="#" class="text-white">Mapa del sitio</a>
+      </div>
+    </div>
+  </div>
+</footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+<!-- Botón WhatsApp -->
+<div class="whatsapp-button">
+  <a href="https://wa.me/573057287714" target="_blank" class="text-white"><i class="bi bi-whatsapp"></i></a>
+</div>
 
+<!-- Estilos personalizados -->
+<style>
+
+  .blog-img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin: 20px 0;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  }
+  .border-bottom {
+    border-bottom: 2px solid #C0B59B !important;
+  }
+  .card {
+    transition: transform 0.3s;
+    border: 1px solid #ddd;
+  }
+  .card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+  }
+  .navbar {
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  }
+  .whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: linear-gradient(to right, #594E40, #C0B59B);
+    color: white;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    z-index: 1000;
+  }
+  .whatsapp-button:hover {
+    transform: scale(1.1);
+    transition: all 0.3s ease;
+  }
+  .social-icons a {
+    font-size: 1.5rem;
+    transition: all 0.3s ease;
+  }
+  .social-icons a:hover {
+    color: #C0B59B !important;
+    transform: translateY(-3px);
+  }
+  .list-unstyled li {
+    margin-bottom: 0.5rem;
+  }
+</style>   
