--- a/agua.html
+++ b/agua.html
@@ -125,9 +125,9 @@
 <!-- Top Bar -->
 <div class="top-bar text-center">
   <span>
-    <i class="bi bi-telephone"></i> +57 300 123 4567 |
+    <i class="bi bi-telephone"></i> +57 305 728 7714 |
     <i class="bi bi-geo-alt"></i> Bogotá, Colombia |
-    <i class="bi bi-envelope"></i> info@geoconsultores.com |
+    <i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com |
     <i class="bi bi-facebook"></i> /GCA |
     <i class="bi bi-instagram"></i> @GCA
   </span>
@@ -536,8 +536,8 @@
             </div>
             <ul class="list-unstyled">
               <li><i class="bi bi-geo-alt-fill me-2" style="color: #C0B59B;"></i> Cra 45 #26-85, Bogotá, Colombia</li>
-              <li><i class="bi bi-telephone-fill me-2" style="color: #C0B59B;"></i> +57 1 123 4567</li>
-              <li><i class="bi bi-envelope-fill me-2" style="color: #C0B59B;"></i> geofisica@geoconsultores.com</li>
+              <li><i class="bi bi-telephone-fill me-2" style="color: #C0B59B;"></i> +57 305 728 7714</li>
+              <li><i class="bi bi-envelope-fill me-2" style="color: #C0B59B;"></i> gcageoconsultoresasociados@gmail.com</li>
               <li><i class="bi bi-clock-fill me-2" style="color: #C0B59B;"></i> Lunes a Viernes: 8:00 am - 5:00 pm</li>
             </ul>
             <hr>
@@ -605,7 +605,7 @@
 </footer>
 
 <!-- Botón WhatsApp (solo uno) -->
-<a href="https://wa.me/573001234567" target="_blank" class="whatsapp-btn">
+<a href="https://wa.me/573057287714" target="_blank" class="whatsapp-btn">
   <i class="bi bi-whatsapp"></i>
 </a>
 
