--- a/geotermia.html
+++ b/geotermia.html
@@ -577,7 +577,7 @@
   </div>
 </section>
 
-    <!-- Contacto -->
+  <!-- Contacto -->
   <section id="contacto" class="mb-5 py-4 rounded" style="background-color: #f4f4f4;">
     <h2 class="fw-bold border-bottom pb-2" style="color: #594E40;">Contáctenos</h2>
     
@@ -629,8 +629,8 @@
             </div>
             <ul class="list-unstyled">
               <li><i class="bi bi-geo-alt-fill me-2" style="color: #C0B59B;"></i> Cra 45 #26-85, Bogotá, Colombia</li>
-              <li><i class="bi bi-telephone-fill me-2" style="color: #C0B59B;"></i> +57 1 123 4567</li>
-              <li><i class="bi bi-envelope-fill me-2" style="color: #C0B59B;"></i> geofisica@geoconsultores.com</li>
+              <li><i class="bi bi-telephone-fill me-2" style="color: #C0B59B;"></i> +57 305 728 7714</li>
+              <li><i class="bi bi-envelope-fill me-2" style="color: #C0B59B;"></i> gcageoconsultoresasociados@gmail.com</li>
               <li><i class="bi bi-clock-fill me-2" style="color: #C0B59B;"></i> Lunes a Viernes: 8:00 am - 5:00 pm</li>
             </ul>
             <hr>
@@ -697,63 +697,13 @@
   </div>
 </footer>
 
-<!-- Botón WhatsApp -->
-<div class="whatsapp-button">
-  <a href="https://wa.me/573057287714" target="_blank" class="text-white"><i class="bi bi-whatsapp"></i></a>
-</div>
+<!-- Botón WhatsApp (solo uno) -->
+<a href="https://wa.me/573057287714" target="_blank" class="whatsapp-btn">
+  <i class="bi bi-whatsapp"></i>
+</a>
 
-<!-- Estilos personalizados -->
-<style>
+<!-- Scripts de Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-  .blog-img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-    margin: 20px 0;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  }
-  .border-bottom {
-    border-bottom: 2px solid #C0B59B !important;
-  }
-  .card {
-    transition: transform 0.3s;
-    border: 1px solid #ddd;
-  }
-  .card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-  }
-  .navbar {
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  }
-  .whatsapp-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: linear-gradient(to right, #594E40, #C0B59B);
-    color: white;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 30px;
-    z-index: 1000;
-  }
-  .whatsapp-button:hover {
-    transform: scale(1.1);
-    transition: all 0.3s ease;
-  }
-  .social-icons a {
-    font-size: 1.5rem;
-    transition: all 0.3s ease;
-  }
-  .social-icons a:hover {
-    color: #C0B59B !important;
-    transform: translateY(-3px);
-  }
-  .list-unstyled li {
-    margin-bottom: 0.5rem;
-  }
-</style>
+</body>
+</html>
