--- a/medio-ambiente.html
+++ b/medio-ambiente.html
@@ -564,8 +564,8 @@
   </section>
 
   <!-- Contacto -->
-  <section id="contacto" class="mb-5">
-    <h2 class="fw-bold border-bottom pb-2 border-eco" style="color: #594E40;">Contáctenos</h2>
+  <section id="contacto" class="mb-5 py-4 rounded" style="background-color: #f4f4f4;">
+    <h2 class="fw-bold border-bottom pb-2" style="color: #594E40;">Contáctenos</h2>
     
     <div class="row mt-4">
       <div class="col-lg-6">
@@ -589,11 +589,11 @@
                 <label for="servicio" class="form-label">Servicio de interés</label>
                 <select class="form-select" id="servicio">
                   <option selected>Seleccione un servicio</option>
-                  <option>Evaluación geoambiental</option>
-                  <option>Estudios de impacto ambiental</option>
-                  <option>Remediación de suelos</option>
-                  <option>Planificación territorial</option>
-                  <option>Monitoreo de geo-ecosistemas</option>
+                  <option>Exploración minera</option>
+                  <option>Estudios hidrogeológicos</option>
+                  <option>Geotecnia e ingeniería civil</option>
+                  <option>Investigación ambiental</option>
+                  <option>Prospección arqueológica</option>
                   <option>Otro</option>
                 </select>
               </div>
@@ -609,22 +609,22 @@
       <div class="col-lg-6">
         <div class="card h-100">
           <div class="card-body">
-            <h4 style="color: #594E40;">Nuestros especialistas</h4>
+            <h4 style="color: #594E40;">Nuestras oficinas</h4>
             <div class="mb-4">
-              <img src="Imagenes/equipo-geoeco.jpg" alt="Equipo de geo-ecosistemas" class="img-fluid rounded">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.785931816786!2d-74.083905924682!3d4.638129942540608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9a3b0f0e0e0f%3A0x1b8c3b0f0e0e0e0f!2sGeoconsultores%20Asociados!5e0!3m2!1sen!2sco!4v1620000000000!5m2!1sen!2sco" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <ul class="list-unstyled">
               <li><i class="bi bi-geo-alt-fill me-2" style="color: #C0B59B;"></i> Cra 45 #26-85, Bogotá, Colombia</li>
-              <li><i class="bi bi-telephone-fill me-2" style="color: #C0B59B;"></i> +57 1 123 4567</li>
-              <li><i class="bi bi-envelope-fill me-2" style="color: #C0B59B;"></i> geoeco@geoconsultores.com</li>
+              <li><i class="bi bi-telephone-fill me-2" style="color: #C0B59B;"></i> +57 305 728 7714</li>
+              <li><i class="bi bi-envelope-fill me-2" style="color: #C0B59B;"></i> gcageoconsultoresasociados@gmail.com</li>
               <li><i class="bi bi-clock-fill me-2" style="color: #C0B59B;"></i> Lunes a Viernes: 8:00 am - 5:00 pm</li>
             </ul>
             <hr>
-            <h5 style="color: #594E40;">Recursos</h5>
+            <h5 style="color: #594E40;">Descargables</h5>
             <div class="d-flex flex-wrap gap-2">
-              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-file-earmark-pdf"></i> Guía metodológica</a>
+              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-file-earmark-pdf"></i> Brochure PDF</a>
               <a href="#" class="btn btn-outline-secondary"><i class="bi bi-file-earmark-word"></i> Formatos</a>
-              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-file-earmark-text"></i> Artículos técnicos</a>
+              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-file-earmark-text"></i> Términos</a>
             </div>
           </div>
         </div>
@@ -639,7 +639,7 @@
     <div class="row">
       <div class="col-md-4 mb-4">
         <h5>Geoconsultores Asociados</h5>
-        <p>Especialistas en geo-ecosistemas ambientales con enfoque multidisciplinario.</p>
+        <p>Especialistas en geofísica aplicada con tecnología de punta para exploración del subsuelo.</p>
         <div class="social-icons">
           <a href="#" class="text-white me-2"><i class="bi bi-linkedin"></i></a>
           <a href="#" class="text-white me-2"><i class="bi bi-twitter-x"></i></a>
@@ -648,24 +648,24 @@
         </div>
       </div>
       <div class="col-md-4 mb-4">
-        <h5>Servicios</h5>
+        <h5>Métodos Geofísicos</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-white">Estudios geoambientales</a></li>
-          <li><a href="#" class="text-white">Evaluación de impactos</a></li>
-          <li><a href="#" class="text-white">Remediación de suelos</a></li>
-          <li><a href="#" class="text-white">Planificación territorial</a></li>
-          <li><a href="#" class="text-white">Capacitación técnica</a></li>
+          <li><a href="#" class="text-white">Sísmica</a></li>
+          <li><a href="#" class="text-white">Eléctrica/Electromagnética</a></li>
+          <li><a href="#" class="text-white">Magnetometría</a></li>
+          <li><a href="#" class="text-white">Gravimetría</a></li>
+          <li><a href="#" class="text-white">Georadar (GPR)</a></li>
         </ul>
       </div>
       <div class="col-md-4 mb-4">
         <h5>Certificaciones</h5>
         <div class="d-flex flex-wrap gap-3">
-          <img src="Imagenes/certificacion-iso-14001.png" alt="ISO 14001" style="height: 50px;">
-          <img src="Imagenes/certificacion-anla.png" alt="ANLA" style="height: 50px;">
-          <img src="Imagenes/certificacion-icontect.png" alt="ICONTEC" style="height: 50px;">
+          <img src="Imagenes/certificacion-icp.png" alt="ICP" style="height: 50px;">
+          <img src="Imagenes/certificacion-iso.png" alt="ISO" style="height: 50px;">
+          <img src="Imagenes/certificacion-sgc.png" alt="SGC" style="height: 50px;">
         </div>
         <div class="mt-3">
-          <p class="small">Acreditados para estudios ambientales ante autoridades competentes.</p>
+          <p class="small">Acreditados por el Servicio Geológico Colombiano para estudios geofísicos.</p>
         </div>
       </div>
     </div>
@@ -683,10 +683,13 @@
   </div>
 </footer>
 
-<!-- Botón WhatsApp -->
-<a href="https://wa.me/573001234567" target="_blank" class="whatsapp-btn">
+<!-- Botón WhatsApp (solo uno) -->
+<a href="https://wa.me/573057287714" target="_blank" class="whatsapp-btn">
   <i class="bi bi-whatsapp"></i>
 </a>
 
 <!-- Scripts de Bootstrap -->
-<script src="https://cdn.jsdelivr.net
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+</html>
