--- a/geotecnia.html
+++ b/geotecnia.html
@@ -161,6 +161,38 @@
     </div>
   </div>
 </nav>
+
+<!-- Cabecera con imagen destacada -->
+<section class="hero-section" style="background-image: linear-gradient(rgba(89, 78, 64, 0.7), rgba(89, 78, 64, 0.7)), url('Imagenes/Geofisica/geofisica-3.jpg');">
+  <div class="container text-center text-white">
+    <h1 class="fw-bold display-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">GEOFÍSICA APLICADA</h1>
+    <p class="lead" style="text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8); max-width: 800px; margin: 0 auto;">
+      Soluciones no invasivas para exploración del subsuelo mediante métodos físicos
+    </p>
+  </div>
+</section>
+
+<!-- Barra de navegación interna -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white secondary-nav">
+  <div class="container">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarGeofisica">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarGeofisica">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item"><a class="nav-link" href="#definicion">¿Qué es Geofísica?</a></li>
+        <li class="nav-item"><a class="nav-link" href="#metodos">Métodos Geofísicos</a></li>
+        <li class="nav-item"><a class="nav-link" href="#aplicaciones">Aplicaciones</a></li>
+        <li class="nav-item"><a class="nav-link" href="#servicios">Nuestros Servicios</a></li>
+        <li class="nav-item"><a class="nav-link" href="#casos">Casos de Estudio</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
 <!-- Cabecera con imagen destacada -->
 <section class="hero-section" style="background-image: linear-gradient(rgba(89, 78, 64, 0.7), rgba(89, 78, 64, 0.7)), url('Imagenes/geotecnia-hero.jpg');">
   <div class="container text-center text-white">
