--- a/geofisica.html
+++ b/geofisica.html
@@ -125,8 +125,8 @@
 <!-- Top Bar -->
 <div class="top-bar text-center">
   <span>
-    <i class="bi bi-telephone"></i> +57 305 728 7714 |
-    <i class="bi bi-geo-alt"></i> Bogotá, Colombia |
+    <i class="bi bi-telephone"></i> +57 305 728 7714 - +57 320 836 8473 |
+    <i class="bi bi-geo-alt"></i> Carrera 151C # 139 24, Santa Rita de Suba, Bogotá D.C. |
     <i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com |
     <i class="bi bi-facebook"></i> /GCA |
     <i class="bi bi-instagram"></i> @GCA
