--- a/geotecnia.html
+++ b/geotecnia.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Geofísica | GCA - Geoconsultores Asociados</title>
+  <title>Geotecnia | GCA - Geoconsultores Asociados</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
@@ -163,11 +163,11 @@
 </nav>
 
 <!-- Cabecera con imagen destacada -->
-<section class="hero-section" style="background-image: linear-gradient(rgba(89, 78, 64, 0.7), rgba(89, 78, 64, 0.7)), url('Imagenes/Geofisica/geofisica-3.jpg');">
+<section class="hero-section" style="background-image: linear-gradient(rgba(89, 78, 64, 0.7), rgba(89, 78, 64, 0.7)), url('Imagenes/Geotecnia/image.jpg');">
   <div class="container text-center text-white">
-    <h1 class="fw-bold display-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">GEOFÍSICA APLICADA</h1>
+    <h1 class="fw-bold display-4" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">GEOTECNIA APLICADA</h1>
     <p class="lead" style="text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8); max-width: 800px; margin: 0 auto;">
-      Soluciones no invasivas para exploración del subsuelo mediante métodos físicos
+      Soluciones técnicas para construcción, minería e infraestructura basadas en el estudio científico del suelo
     </p>
   </div>
 </section>
@@ -175,15 +175,15 @@
 <!-- Barra de navegación interna -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white secondary-nav">
   <div class="container">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarGeofisica">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarGeotecnia">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarGeofisica">
+    <div class="collapse navbar-collapse" id="navbarGeotecnia">
       <ul class="navbar-nav mx-auto">
-        <li class="nav-item"><a class="nav-link" href="#definicion">¿Qué es Geofísica?</a></li>
-        <li class="nav-item"><a class="nav-link" href="#metodos">Métodos Geofísicos</a></li>
+        <li class="nav-item"><a class="nav-link" href="#definicion">¿Qué es Geotecnia?</a></li>
         <li class="nav-item"><a class="nav-link" href="#aplicaciones">Aplicaciones</a></li>
         <li class="nav-item"><a class="nav-link" href="#servicios">Nuestros Servicios</a></li>
+        <li class="nav-item"><a class="nav-link" href="#metodologia">Metodología</a></li>
         <li class="nav-item"><a class="nav-link" href="#casos">Casos de Estudio</a></li>
         <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
       </ul>
