--- a/geotermia.html
+++ b/geotermia.html
@@ -599,6 +599,51 @@
   </section>
 </main>
 
+<!-- Recursos Adicionales -->
+<section class="py-5" style="background-color: #594E40; color: white;">
+  <div class="container">
+    <h2 class="fw-bold text-center mb-4">Recursos Adicionales</h2>
+    <div class="row">
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title" style="color: #594E40;">Documentos Técnicos</h5>
+            <ul>
+              <li><a href="#" style="color: #C0B59B;">Mapa de gradiente geotérmico SGC</a></li>
+              <li><a href="#" style="color: #C0B59B;">Guía de exploración geotérmica</a></li>
+              <li><a href="#" style="color: #C0B59B;">Estudios de prefactibilidad</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title" style="color: #594E40;">Normatividad</h5>
+            <ul>
+              <li><a href="#" style="color: #C0B59B;">Ley 1715 de 2014</a></li>
+              <li><a href="#" style="color: #C0B59B;">Decreto 1598 de 2024</a></li>
+              <li><a href="#" style="color: #C0B59B;">Resoluciones CREG</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <div class="card-body">
+            <h5 class="card-title" style="color: #594E40;">Multimedia</h5>
+            <ul>
+              <li><a href="#" style="color: #C0B59B;">Video: Proceso geotérmico</a></li>
+              <li><a href="#" style="color: #C0B59B;">Galería fotográfica</a></li>
+              <li><a href="#" style="color: #C0B59B;">Webinars técnicos</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>  
+
 <!-- Contacto -->
 <section id="contacto" class="mb-5 py-4 rounded" style="background-color: #f4f4f4;">
   <div class="container">
