--- a/agua.html
+++ b/agua.html
@@ -170,12 +170,13 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle active" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown">Servicios</a>
           <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="avr.html">Amenza, Vulnerabilidad y Riesgo</a></li>
               <li><a class="dropdown-item" href="geofisica.html">Geofísica</a></li>
               <li><a class="dropdown-item" href="geotecnia.html">Geotecnia</a></li>
               <li><a class="dropdown-item" href="geotermia.html">Geotermia</a></li>
               <li><a class="dropdown-item" href="licencias.html">Licencias de Construcción</a></li>                     
               <li><a class="dropdown-item" href="medio-ambiente.html">Medio Ambiente</a></li>
-              <li><a class="dropdown-item active" href="agua.html">Recursos Hídricos</a></li>             
+              <li><a class="dropdown-item" href="agua.html">Recursos Hídricos</a></li>             
               <li><a class="dropdown-item" href="sig.html">SIG</a></li>
           </ul>
         </li>
