--- a/licencias.html
+++ b/licencias.html
@@ -133,6 +133,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown">Servicios</a>
             <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="avr.html">Amenza, Vulnerabilidad y Riesgo</a></li>
               <li><a class="dropdown-item" href="geofisica.html">Geofísica</a></li>
               <li><a class="dropdown-item" href="geotecnia.html">Geotecnia</a></li>
               <li><a class="dropdown-item" href="geotermia.html">Geotermia</a></li>
