--- a/avr.html
+++ b/avr.html
@@ -176,6 +176,17 @@
   </style>
 </head>
 
+<!-- Al final del body, antes de </body> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  // Opcional: Inicializar tooltips y popovers si los usas
+  document.addEventListener('DOMContentLoaded', function() {
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl);
+    });
+  });
+</script>  
 <body>
 
 <!-- Top Bar -->
