--- a/avr.html
+++ b/avr.html
@@ -14,11 +14,11 @@
     body {
       font-family: 'Poppins', sans-serif;
       background-color: #FFFFFF;
-      color: #333;
+      color: #594E40;
       padding-top: 112px;
     }
     .top-bar {
-      background-color: #8E24AA;
+      background-color: #C0B59B;
       padding: 5px 0;
       font-size: 14px;
       position: fixed;
@@ -40,14 +40,8 @@
       width: 100%;
       z-index: 1020;
     }
-    .secondary-nav {
-      position: sticky;
-      top: 112px;
-      z-index: 1010;
-      background-color: white;
-    }
     .footer {
-      background-color: #6A1B9A;
+      background-color: #594E40;
       color: #fff;
       padding: 40px 0;
     }
