--- a/avr.html
+++ b/avr.html
@@ -819,13 +819,13 @@
         </div>
       </div>
       <div class="col-md-4 mb-4">
-        <h5>Métodos Geofísicos</h5>
+        <h5>Servicios de AVR</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-white">Sísmica</a></li>
-          <li><a href="#" class="text-white">Eléctrica/Electromagnética</a></li>
-          <li><a href="#" class="text-white">Magnetometría</a></li>
-          <li><a href="#" class="text-white">Gravimetría</a></li>
-          <li><a href="#" class="text-white">Georadar (GPR)</a></li>
+          <li><a href="#" class="text-white">Evaluaciones Integrales</a></li>
+          <li><a href="#" class="text-white">AVR de Acueductos</a></li>
+          <li><a href="#" class="text-white">Planes de Mitigación</a></li>
+          <li><a href="#" class="text-white">Sistemas de Información</a></li>
+          <li><a href="#" class="text-white">Capacitaciones</a></li>
         </ul>
       </div>
       <div class="col-md-4 mb-4">
