--- a/avr.html
+++ b/avr.html
@@ -254,7 +254,7 @@
         </div>
       </div>
       <div class="col-lg-6">
-        <img src="Imagenes/avr-concepto.jpg" alt="Concepto AVR" class="img-fluid rounded shadow">
+        <img src="Imagenes/AVR/avr-concepto.png" alt="Concepto AVR" class="img-fluid rounded shadow">
         <figcaption class="text-center mt-2 text-muted">Figura 1. Componentes interrelacionados del AVR</figcaption>
       </div>
     </div>
@@ -443,7 +443,7 @@
           <span class="badge method-badge">Sensores IoT</span>
         </div>
         
-        <img src="Imagenes/avr-tecnologia.jpg" alt="Tecnología para AVR" class="img-fluid rounded shadow mt-3">
+        <img src="Imagenes/AVR/avr-tecnologia.png" alt="Tecnología para AVR" class="img-fluid rounded shadow mt-3">
       </div>
     </div>
   </section>
@@ -572,7 +572,7 @@
           </div>
         </div>
         
-        <img src="Imagenes/avr-colombia.jpg" alt="Mapa de riesgos Colombia" class="img-fluid rounded shadow">
+        <img src="Imagenes/AVR/avr-colombia.png" alt="Mapa de riesgos Colombia" class="img-fluid rounded shadow">
         <figcaption class="text-center mt-2 text-muted">Figura 2. Mapa de amenazas múltiples en Colombia (Fuente: UNGRD)</figcaption>
       </div>
     </div>
